--- a/www/static/errors/unauthorized.html
+++ b/www/static/errors/unauthorized.html
@@ -16,7 +16,7 @@
 
         <!-- HEADER -->
         <div id="header">
-          <img src="/koji-static/images/koji.png" alt="Koji Logo" width="49" height="40" id="kojiLogo"/>
+          <img src="/koji-static/images/koji.png" alt="Koji Logo" id="kojiLogo"/>
         </div><!-- end header -->
 
         <div id="content">
